--- a/runes.html
+++ b/runes.html
@@ -62,17 +62,26 @@
             <div class="row featurette">
                 <div class="col-md-12">
                   <p class="lead">є старовинною системою письма, що використовувалася в давніх германських та скандинавських культурах, включаючи вікінгів. Вони використовувалися не лише для письма, але й у релігійному та містичному контексті. Важливо відзначити, що у міру поширення християнства в 10-11 століттях рунні системи письма були значно замінені латинським алфавітом.
-                    <br><br>Руни були важливою частиною давньої релігійної практики, і вони вважалися священними символами. Вони використовувалися в ритуалах, сповіщеннях та для зв'язку з божествами. Руни також були використані в рунних чарах - релігійних заклинаннях або прокляттях, вирізаних на камені або інших твердих поверхнях.
-                    <br><br>Існує декілька рунних "алфавітів", відомих як "футарки". Найбільш відомими є старший футарк (24 руни) та молодший футарк (16 рун). Кожна руна має своє ім'я та значення, але у багатьох випадках ці значення відтворюються тільки через пізніші історичні джерела, і точні відповідності часто важко встановити.
                 </div>
             </div>
             <hr class="featurette-divider">
+
+            <img  src="assets/img/runes/Runic_letters_elder_futhark.png" alt="Your Image" usemap="#image-map" width="500" height="400" style="display: block; margin-left: auto; margin-right: auto;">
+
+            <map name="image-map">
+              <area shape="rect" coords="x1,y1,x2,y2" href="page1.html" alt="Area 1">
+              <area shape="rect" coords="x,y,radius" href="page2.html" alt="Area 2">
+              <area shape="rect" coords="x1,y1,x2,y2,x3,y3,..." href="page3.html" alt="Area 3">
+            </map>
+            <a href="#element_Fehu"><img  src="assets/img/runes/Runic_letters_elder_futhark.png" alt="Generic placeholder image" width="500" height="400" style="display: block; margin-left: auto; margin-right: auto;"></a>
+
         </div>
     </section>
     <section id="background_section_runes_tb" data-speed="2" data-type="background">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
+
                     <ol>
                         <li>Ісландський - Ættir Эттир Фрейра и Фрейи</li>
                         <div class="row">
@@ -88,7 +97,7 @@
                         </thead>
 
                 <tbody>
-                  <tr>
+                  <tr id="element_Fehu">
                     <td class="symbols_size">&#5792;</td>
                     <td>Fehu (Феху)</td>
                     <td>«скот»</td>
@@ -96,49 +105,49 @@
                     <td>f, v</td>
                   </tr>
 
-                  <tr>
+                  <tr id="element_Uruz">
                     <td class="symbols_size">&#5794;</td>
                     <td>Uruz (Уруз)</td>
                     <td>«зубр»</td>
                     <td>Примітивна сила, пристрасть.</td>
                     <td>u</td>
                   </tr>
-                  <tr>
+                  <tr id="element_Þurisaz">
                     <td class="symbols_size">&#5798;</td>
                     <td>Þurisaz (Турисаз)</td>
                     <td>«Турс, Велетень»</td>
                     <td>Велетень, гігант, Торн, йотун, троль, шип, закон, захист, виклик та випробування, сила.</td>
                     <td>þ</td>
                   </tr>
-                  <tr>
+                  <tr id="element_Ansuz">
                     <td class="symbols_size">&#5800;</td>
                     <td>Ansuz</td>
                     <td>«бог»</td>
                     <td>Руна поезії та магії, одкровень, натхнення, руна знань та несподіваних відкриттів та зустрічей, мудрості.</td>
                     <td>a</td>
                   </tr>
-                  <tr>
+                  <tr id="element_Raido">
                     <td class="symbols_size">&#5809;</td>
                     <td>Raido (Райдо)</td>
                     <td>«шлях»</td>
                     <td>Дорога, шлях, подорож, еволюція, розвиток</td>
                     <td>r</td>
                   </tr>
-                  <tr>
+                  <tr id="element_Kenaz">
                     <td class="symbols_size">&#5810;</td>
                     <td>Kenaz (Кеназ)</td>
                     <td>«смолоскип»</td>
                     <td>Знання, творчість, натхнення, вогонь життя, енергія життя, пристрасть, керована сила.</td>
                     <td>k</td>
                   </tr>
-                  <tr>
+                  <tr id="element_Gebo">
                     <td class="symbols_size">&#5815;</td>
                     <td>Gebo (Гебо)</td>
                     <td>«дар»</td>
                     <td>Руна єдності протилежностей, дару, руна партнерства та свободи.</td>
                     <td>g, γ</td>
                   </tr>
-                  <tr>
+                  <tr id="element_Wunjo">
                     <td class="symbols_size">&#5817;</td>
                     <td>Wunjo (Вуньо)</td>
                     <td>«радість»</td>
@@ -158,56 +167,56 @@
                             <th>Транскрипція</th>
                           </tr>
                         </thead>
-                    <tr>
+                    <tr id="element_Hagalaz">
                     <td class="symbols_size">&#5818;</td>
                     <td>Hagalaz (Хагалаз)</td>
                     <td>«град»</td>
                     <td>Руна руйнівної енергії, грози та граду, які знищують все на своєму шляху, щоб народилося нове, для особистісного та духовного зростання.</td>
                     <td>h</td>
                   </tr>
-                  <tr>
+                  <tr id="element_Nauthiz">
                     <td class="symbols_size">&#5822;</td>
                     <td>Nauthiz (Наутиз)</td>
                     <td>«нужда»</td>
                     <td>Символізує потребу, кайдани і примус, брак чогось і важкий час.</td>
                     <td>n</td>
                   </tr>
-                  <tr>
+                  <tr id="element_Isaz">
                     <td class="symbols_size">&#5825;</td>
                     <td>Isaz (Иса)</td>
                     <td>«лід»</td>
                     <td>Стихійна руна льоду та холоду, творчості.</td>
                     <td>i</td>
                   </tr>
-                  <tr>
+                  <tr id="element_Jera">
                     <td class="symbols_size">&#5827;</td>
                     <td>Jera (Йера)</td>
                     <td>«год, врожай»</td>
                     <td>Руна врожаю, перебіг часу. Йера - руна досягнення та результату.</td>
                     <td>j</td>
                   </tr>
-                    <tr>
+                    <tr id="element_Eihwaz">
                     <td class="symbols_size">&#5858;</td>
                     <td>Eihwaz (Эйваз)</td>
                     <td>«град»</td>
                     <td>Руна подорожей поза тілом та спілкування з Нижнім Світом, смерті, руна оборони та захисту.</td>
                     <td>é (ih-wh)</td>
                   </tr>
-                  <tr>
+                  <tr id="element_Perthro">
                     <td class="symbols_size">&#5832;</td>
                     <td>Perthro (Перт)</td>
                     <td>«кладезь пам'яти»</td>
                     <td>Руна долі та жіночого характеру.</td>
                     <td>p</td>
                   </tr>
-                  <tr>
+                  <tr id="element_Algiz">
                     <td class="symbols_size">&#5833;</td>
                     <td>Algiz (Альгиз)</td>
                     <td>«лось»</td>
                     <td>Руна захисту, захищеності, заступництва Богів.</td>
                     <td>-R (-z)</td>
                   </tr>
-                  <tr>
+                  <tr id="element_Sowilo">
                     <td class="symbols_size">&#5834;</td>
                     <td>Sowilo (Совило)</td>
                     <td>«Сонце»</td>
@@ -227,56 +236,56 @@
                             <th>Транскрипція</th>
                           </tr>
                         </thead>
-                    <tr>
+                    <tr id="element_Tiwaz">
                     <td class="symbols_size">&#5839;</td>
                     <td>Tiwaz (Тейваз)</td>
                     <td>«Тюр»</td>
                     <td>Руна Воїна Духа, присвячена вона богу війни та правосуддя Тюру, руна перемоги.</td>
                     <td>t</td>
                   </tr>
-                  <tr>
+                  <tr id="element_Berkana">
                     <td class="symbols_size">&#5842;</td>
                     <td>Berkana (Беркана)</td>
                     <td>«береза»</td>
                     <td>Руна богинь та жіночого початку. Руна реінкарнації.</td>
                     <td>b</td>
                   </tr>
-                  <tr>
+                  <tr id="element_Ehwaz">
                     <td class="symbols_size">&#5846;</td>
                     <td>Ehwaz (Эваз)</td>
                     <td>«лошадь»</td>
                     <td>Руна змін та рухів.</td>
                     <td>e</td>
                   </tr>
-                  <tr>
+                  <tr id="element_Mannaz">
                     <td class="symbols_size">&#5847;</td>
                     <td>Mannaz (Манназ)</td>
                     <td>«человек»</td>
                     <td>Руна справжнього свого «Я», думки, розуму, розуміння.</td>
                     <td>m</td>
                   </tr>
-                    <tr>
+                    <tr id="element_Laguz">
                     <td class="symbols_size">&#5850;</td>
                     <td>Laguz (Лагуз)</td>
                     <td>«озеро»</td>
                     <td>Руна руху, інтуїції, вказівки шляху та заступництва богів.</td>
                     <td>l</td>
                   </tr>
-                  <tr>
+                  <tr id="element_Ingwaz">
                     <td class="symbols_size">&#5852;</td>
                     <td>Ingwaz (Ингуз)</td>
                     <td>«Ингви»</td>
                     <td>Символізує родючість, урожай, успіх.</td>
                     <td>(Фрейр)	ŋ</td>
                   </tr>
-                  <tr>
+                  <tr id="element_Dagaz">
                     <td class="symbols_size">&#5854;</td>
                     <td>Dagaz (Дагаз)</td>
                     <td>«день»</td>
                     <td>Ця руна означає духовний і матеріальний спадок, символізує собою рід, сім'ю, будинок, власність, Батьківщину, традиції та звичаї предків.</td>
                     <td>d, ð</td>
                   </tr>
-                  <tr>
+                  <tr id="element_Othala">
                     <td class="symbols_size">&#5855;</td>
                     <td>Othala (Одал)</td>
                     <td>«наследие»</td>
@@ -296,7 +305,8 @@
 <footer>
 
 </footer>
-
+<!-- runes.js -->
+<script src="assets/js/runes.js"></script>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
