--- a/runes.html
+++ b/runes.html
@@ -66,15 +66,41 @@
             </div>
             <hr class="featurette-divider">
 
-            <img  src="assets/img/runes/Runic_letters_elder_futhark.png" alt="Your Image" usemap="#image-map" width="500" height="400" style="display: block; margin-left: auto; margin-right: auto;">
+            <!-- <img  src="assets/img/runes/Runic_letters_sm.png" alt="Your Image" usemap="#image-map" style="display: block; margin-left: auto; margin-right: auto;">
+            -->
+            <img class="runic_letters" src="assets/img/runes/Runic_letters_sm.png" alt="Runic Alphabet" usemap="#imagemap" width="500"  height="323">
 
-            <map name="image-map">
-              <area shape="rect" coords="x1,y1,x2,y2" href="page1.html" alt="Area 1">
-              <area shape="rect" coords="x,y,radius" href="page2.html" alt="Area 2">
-              <area shape="rect" coords="x1,y1,x2,y2,x3,y3,..." href="page3.html" alt="Area 3">
+            <map name="imagemap">
+              <!-- First Row -->
+              <area shape="rect" coords="0,0,30,100" alt="Fehu" href="#element_Fehu">
+              <area shape="rect" coords="30,0,60,100" alt="Uruz" href="#element_Uruz">
+              <area shape="rect" coords="60,0,90,100" alt="Þurisaz" href="#element_Þurisaz">
+              <area shape="rect" coords="90,0,115,100" alt="Ansuz" href="#element_Ansuz">
+              <area shape="rect" coords="115,0,140,100" alt="Raido" href="#element_Raido">
+              <area shape="rect" coords="140,0,165,100" alt="Kenaz" href="#element_Kenaz">
+              <area shape="rect" coords="165,0,200,100" alt="Gebo" href="#element_Gebo">
+              <area shape="rect" coords="200,0,230,100" alt="Wunjo" href="#element_Wunjo">
+
+              <!-- Second Row -->
+              <area shape="rect" coords="0,115,30,215" alt="Hagalaz" href="#element_Hagalaz">
+              <area shape="rect" coords="35,115,55,215" alt="Nauthiz" href="#element_Nauthiz">
+              <area shape="rect" coords="55,115,65,215" alt="Isaz" href="#element_Isaz">
+              <area shape="rect" coords="70,115,100,215" alt="Jera" href="#element_Jera">
+              <area shape="rect" coords="100,115,130,215" alt="Eihwaz" href="#element_Eihwaz">
+              <area shape="rect" coords="130,115,160,215" alt="Perthro" href="#element_Perthro">
+              <area shape="rect" coords="160,115,190,215" alt="Algiz" href="#element_Algiz">
+              <area shape="rect" coords="200,115,225,215" alt="Sowilo" href="#element_Sowilo">
+
+              <!-- Third Row -->
+              <area shape="rect" coords="0,225,25,330" alt="Tiwaz" href="#element_Tiwaz">
+              <area shape="rect" coords="25,225,55,330" alt="Berkana" href="#element_Berkana">
+              <area shape="rect" coords="55,225,80,330" alt="Ehwaz" href="#element_Ehwaz">
+              <area shape="rect" coords="85,225,110,330" alt="Mannaz" href="#element_Mannaz">
+              <area shape="rect" coords="115,225,133,330" alt="Laguz" href="#element_Laguz">
+              <area shape="rect" coords="135,225,155,330" alt="Ingwaz" href="#element_Ingwaz">
+              <area shape="rect" coords="157,225,190,330" alt="Dagaz" href="#element_Dagaz">
+              <area shape="rect" coords="193,230,225,327" alt="Othala" href="#element_Othala">
             </map>
-            <a href="#element_Fehu"><img  src="assets/img/runes/Runic_letters_elder_futhark.png" alt="Generic placeholder image" width="500" height="400" style="display: block; margin-left: auto; margin-right: auto;"></a>
-
         </div>
     </section>
     <section id="background_section_runes_tb" data-speed="2" data-type="background">
