Added arrow to the top

--- a/character.html
+++ b/character.html
@@ -45,6 +45,16 @@
     </div>
 </header>
 
+<!-- Back to top button -->
+<button
+        type="button"
+        class="btn btn-danger btn-floating btn-lg"
+        id="btn-back-to-top"
+        >
+  <i class="bi bi-arrow-up"></i>
+</button>
+
+
 <main class="character">
     <section id="background_section" data-speed="2" data-type="background">
         <div class="container container-character">
