--- a/contact.html
+++ b/contact.html
@@ -46,6 +46,16 @@
     </div>
 </header>
 
+<!-- Back to top button -->
+<button
+        type="button"
+        class="btn btn-danger btn-floating btn-lg"
+        id="btn-back-to-top"
+        >
+  <i class="bi bi-arrow-up"></i>
+</button>
+
+
 <main>
     <div class="container">
         <hr class="featurette-divider">
