--- a/index.html
+++ b/index.html
@@ -44,6 +44,15 @@
     </div>
 </header>
 
+<!-- Back to top button -->
+<button
+        type="button"
+        class="btn btn-danger btn-floating btn-lg"
+        id="btn-back-to-top"
+        >
+  <i class="bi bi-arrow-up"></i>
+</button>
+
 <main>
     <div class="container">
         <div class="row">
