--- a/runes.html
+++ b/runes.html
@@ -12,6 +12,7 @@
     <link href="assets/img/favicon.png" rel="icon" type="image/png">
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css" rel="stylesheet">
     <!-- Template Main CSS File -->
     <link href="assets/css/my_style.css" rel="stylesheet">
     <!-- Runes CSS File -->
@@ -45,6 +46,15 @@
     </div>
 </header>
 
+<!-- Back to top button -->
+<button
+        type="button"
+        class="btn btn-danger btn-floating btn-lg"
+        id="btn-back-to-top"
+        >
+  <i class="bi bi-arrow-up"></i>
+</button>
+
 <main class="runes">
     <section id="background_section" data-speed="2" data-type="background">
         <div class="container container-runes">
@@ -72,7 +82,7 @@
 
             <map name="imagemap">
               <!-- First Row -->
-              <area shape="rect" coords="0,0,30,100" alt="Fehu" href="#element_Fehu">
+              <area shape="rect" coords="0,0,25,100" alt="Fehu" href="#element_Fehu">
               <area shape="rect" coords="30,0,60,100" alt="Uruz" href="#element_Uruz">
               <area shape="rect" coords="60,0,90,100" alt="Þurisaz" href="#element_Þurisaz">
               <area shape="rect" coords="90,0,115,100" alt="Ansuz" href="#element_Ansuz">
@@ -331,6 +341,8 @@
 <footer>
 
 </footer>
+<!-- btn-to-top.js -->
+<script src="assets/js/btn-to-top.js"></script>
 <!-- runes.js -->
 <script src="assets/js/runes.js"></script>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
