fixed a couple of bugs

--- a/character.html
+++ b/character.html
@@ -12,6 +12,7 @@
     <link href="assets/img/favicon.png" rel="icon" type="image/png">
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css" rel="stylesheet">
     <!-- Template Main CSS File -->
     <link href="assets/css/my_style.css" rel="stylesheet">
     <!-- Character CSS File -->
@@ -63,6 +64,7 @@
                     <h2 class="featurette-heading">Чертоги за датою народження <span class="text-muted">It'll blow your mind.</span></h2>
                 </div>
             </div>
+
             <div class="container">
                 <div class="row">
                     <table class="table">
@@ -510,6 +512,8 @@
 <footer>
 
 </footer>
+<!-- btn-to-top.js -->
+<script src="assets/js/btn-to-top.js"></script>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
