--- a/support_ua.html
+++ b/support_ua.html
@@ -64,7 +64,7 @@
          </div>
         <div class="col-lg-7">
             <br>
-           <p class="lead">Наразі в Україні триває повномаштабна війна з рашистською федерацією, тому просимо підтримати наш проект - донатом на <b>"Повернись живим"</b>.</p>
+           <p class="lead">Наразі в Україні триває повномаштабна війна з рашистською федерацією, тому просимо підтримати наш проект - донатом на <b>"Повернись живим"</b>. Для цього <b>натискай на картинку зліва.</b></p>
         </div>
         <hr class="featurette-divider">
     </div>
