add zooming in image

--- a/character.html
+++ b/character.html
@@ -65,6 +65,20 @@
                 </div>
             </div>
 
+            <hr class="featurette-divider">
+            <div class="row featurette">
+                <div class="col-md-12">
+                  <p class="lead">  Старослав'янські чертоги (також відомі як чергування чертогів) — це система розподілу
+                      року на періоди, пов'язані з покровителями або божествами. Вони представляють собою спосіб поділу
+                      року у стародавніх слов'янських культурах, зокрема у ранніх слов'янських племенах.</p>
+                      <p class="lead">  У стародавніх слов'ян було поширено вірування в різні божества, які були
+                      відповідальні за різні аспекти життя, такі як родючість, врожай, війни, здоров'я тощо.
+                      Кожен місяць року був пов'язаний з певним божеством або покровителем, які символізували певні
+                    риси та якості. Якщо порівнювати його з нашим часом, то він дуже схожий на гороскоп.</p>
+                </div>
+            </div>
+
+
             <div class="container">
                 <div class="row">
                     <table class="table">
@@ -211,7 +225,7 @@
                 <div class="col-md-7">
                   <p class="lead"><b>Чертог Ворона</b> за своєю природою є особливо активними, енергійними і цілеспрямованими людьми, які звикли ефективно вирішувати будь-які проблеми. Чертог Ворона значення має на увазі невпинне прагнення до духовного саморозвитку і досягнення поставлених завдань. Представникам Чертога не властиво залишатися на самоті, оскільки відсутність повноцінного спілкування призводить до морального виснаження. нако в більшості випадків Ворони оточені достатньою кількістю вірних і відданих друзів, які готові прийти на допомогу у важкій життєвій ситуації, тому вони завжди в центрі уваги.</p>
                 </div>
-                <div class="col-md-5">
+                <div class="col-md-5 zoom-image">
                   <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="500x500" src="assets/img/chertogs/raven.jpg" data-holder-rendered="true">
                 </div>
             </div>
@@ -219,10 +233,10 @@
 
             <hr class="featurette-divider">
             <div class="row featurette">
-                <div class="col-md-5">
+                <div class="col-md-5 zoom-image zoom-image">
                   <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="500x500" src="assets/img/chertogs/bear.jpg" data-holder-rendered="true">
                 </div>
-                <div class="col-md-7">
+                <div class="col-md-7" id="text-container">
                   <p class="lead"><b>Чертог Ведмідя</b> Люди, народжені під впливом Чертогу Медведя, відзначаються своєю
                       цілеспрямованістю та рішучістю. Вони мають велику внутрішню силу і впевненість у собі, що дозволяє
                       їм досягати поставлених цілей. Ці люди самодостатні і не бояться брати на себе відповідальність.
@@ -249,14 +263,14 @@
                       Вони здатні ефективно розподіляти свої зусилля і використовувати час для досягнення найкращих
                       результатів.</p>
                 </div>
-                <div class="col-md-5">
+                <div class="col-md-5 zoom-image">
                   <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="500x500" src="assets/img/chertogs/Busl.jpg" data-holder-rendered="true">
                 </div>
             </div>
 
             <hr class="featurette-divider">
             <div class="row featurette">
-                <div class="col-md-5">
+                <div class="col-md-5 zoom-image">
                   <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="500x500" src="assets/img/chertogs/wolf.jpg" data-holder-rendered="true">
                 </div>
                 <div class="col-md-7">
@@ -284,7 +298,7 @@
                       виявляють інноваційність у своїх діях і проявляють талант до пошуку нових ідей і можливостей.
                       Вони можуть бути відмінними проблематиками та майстрами знайти вихід із складних ситуацій.</p>
                 </div>
-                <div class="col-md-5">
+                <div class="col-md-5 zoom-image">
                   <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="500x500" src="assets/img/chertogs/fox.jpg" data-holder-rendered="true">
                 </div>
             </div>
@@ -292,7 +306,7 @@
 
             <hr class="featurette-divider">
             <div class="row featurette">
-                <div class="col-md-5">
+                <div class="col-md-5 zoom-image">
                   <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="500x500" src="assets/img/chertogs/tur.jpg" data-holder-rendered="true">
                 </div>
                 <div class="col-md-7">
@@ -320,14 +334,14 @@
                       докладають чимало зусиль для досягнення великих результатів у своїх справах. Вони виявляють велику
                       відповідальність і завзятість у своїх діях і здатні працювати самостійно та ефективно.</p>
                 </div>
-                <div class="col-md-5">
+                <div class="col-md-5 zoom-image">
                   <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="500x500" src="assets/img/chertogs/los.png" data-holder-rendered="true">
                 </div>
             </div>
 
             <hr class="featurette-divider">
             <div class="row featurette">
-                <div class="col-md-5">
+                <div class="col-md-5 zoom-image">
                   <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="500x500" src="assets/img/chertogs/finist.png" data-holder-rendered="true">
                 </div>
                 <div class="col-md-7">
@@ -347,7 +361,7 @@
             <hr class="featurette-divider">
             <div class="row featurette">
                 <div class="col-md-7">
-                  <p class="lead"><b>Чертог коня</b> починається 21 червня і триває до 13 липня. Цей чертог
+                  <p class="lead"><b>Чертог Коня</b> починається 21 червня і триває до 13 липня. Цей чертог
                       покровительствує богу Купалі і асоціюється з пристрастю до ризику, непостійністю і мінливістю.
                       Люди, народжені під впливом Чертогу Коня, мають пристрасть до пригод і ризику. Вони не бояться
                       випробувати нові речі, відкриватися для непередбачуваних ситуацій і вступати на незнайомі шляхи.
@@ -359,7 +373,7 @@
                       можуть шукати постійного руху та змін, що впливає на їх вибір професії, місця проживання або
                       стосунків.</p>
                 </div>
-                <div class="col-md-5">
+                <div class="col-md-5 zoom-image">
                   <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="500x500" src="assets/img/chertogs/horse.jpg" data-holder-rendered="true">
                 </div>
             </div>
@@ -367,7 +381,7 @@
 
             <hr class="featurette-divider">
             <div class="row featurette">
-                <div class="col-md-5">
+                <div class="col-md-5 zoom-image">
                   <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="500x500" src="assets/img/chertogs/eagle.png" data-holder-rendered="true">
                 </div>
                 <div class="col-md-7">
@@ -399,14 +413,14 @@
                       завдань. Це може стати викликом для їх цілеспрямованості, і вони можуть потребувати додаткової
                       мотивації, щоб зосередитися на завданні і зробити його.</p>
                 </div>
-                <div class="col-md-5">
+                <div class="col-md-5 zoom-image">
                   <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="500x500" src="assets/img/chertogs/ras.png" data-holder-rendered="true">
                 </div>
             </div>
 
             <hr class="featurette-divider">
             <div class="row featurette">
-                <div class="col-md-5">
+                <div class="col-md-5 zoom-image">
                   <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="500x500" src="assets/img/chertogs/diva.jpg" data-holder-rendered="true">
                 </div>
                 <div class="col-md-7">
@@ -439,7 +453,7 @@
                       досягнення великих результатів. Проте, їх вимоги можуть бути вибірковими і викликати напругу в
                       взаєминах з іншими людьми.</p>
                 </div>
-                <div class="col-md-5">
+                <div class="col-md-5 zoom-image">
                   <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="500x500" src="assets/img/chertogs/veprr.jpg" data-holder-rendered="true">
                 </div>
             </div>
@@ -447,7 +461,7 @@
 
             <hr class="featurette-divider">
             <div class="row featurette">
-                <div class="col-md-5">
+                <div class="col-md-5 zoom-image">
                   <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="500x500" src="assets/img/chertogs/shuka.jpg" data-holder-rendered="true">
                 </div>
                 <div class="col-md-7">
@@ -479,14 +493,14 @@
                       життя - в кар'єрі, навчанні, творчості або особистому розвитку. Вони можуть бути мотивованими до
                       досягнення великих цілей і працювати наполегливо, щоб реалізувати свої мрії.</p>
                 </div>
-                <div class="col-md-5">
+                <div class="col-md-5 zoom-image">
                   <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="500x500" src="assets/img/chertogs/labed.png" data-holder-rendered="true">
                 </div>
             </div>
 
             <hr class="featurette-divider">
             <div class="row featurette">
-                <div class="col-md-5">
+                <div class="col-md-5 zoom-image">
                   <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="500x500" src="assets/img/chertogs/snake.png" data-holder-rendered="true">
                 </div>
                 <div class="col-md-7">
