add footer information

--- a/runes.html
+++ b/runes.html
@@ -6,6 +6,9 @@
     <meta name="description" content="">
     <meta name="author" content="AntonMitchenko">
     <meta content="" name="keywords">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Runes and amulets</title>
 
     <!-- Favicons -->
@@ -338,9 +341,62 @@
     </section>
 </main>
 
-<footer>
+<div class="navbar-wrapper">
 
-</footer>
+  <footer class="text-center text-lg-start text-white" style="background-color: #101010">
+
+    <div class="container p-4 pb-0">
+
+      <section class="">
+
+        <div class="row">
+
+            <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+
+                <h6 class="text-uppercase mb-4 font-weight-bold" style="color: white;">
+                  Мета
+                </h6>
+
+                <p style="color: white;">
+                  Робота була виконана в якості проекту на предмет Front-end розробки, та отримання достатньої кількості баллів.
+                </p>
+
+            </div>
+
+          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+            <h6 class="text-uppercase mb-4 font-weight-bold text-white" style="color: white;">Contact</h6>
+            <p style="color: white;"><i class="bi bi-house"></i> Новомосковськ, Україна</p>
+            <p style="color: white;"><i class="bi bi-envelope"></i> anton.mitchenko2003@gmail.com</p>
+            <p style="color: white;"><i class="bi bi-telephone"></i> + 380 661 672 867</p>
+            <p style="color: white;"><i class="bi bi-telephone"></i> + 380 638 960 336</p>
+          </div>
+
+
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+            <h6 class="text-uppercase mb-4 font-weight-bold" style="color: white;">Follow us</h6>
+
+        <div class="btn btn-primary_info_linkedin btn-circle" href="https://ua.linkedin.com/in/anton-mitchenko">
+          <i class="fa  fa-linkedin"></i>
+        </div>
+
+        <div class="btn btn-primary_info_instagram btn-circle" href="https://instagram.com/askold.l">
+          <i class="fa fa-instagram"></i>
+        </div>
+        </div>
+        </div>
+
+      </section>
+
+    </div>
+
+
+    <div style="color: white;">
+      © 2023 Copyright:
+      <a class="text-white" href="https://github.com/AntonMitchenko">Мітченко Антон КМ-03</a>
+    </div>
+
+  </footer>
+</div>
 <!-- btn-to-top.js -->
 <script src="assets/js/btn-to-top.js"></script>
 <!-- runes.js -->
